--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </section>
         <section class="backgound-color-gray">
-            <div class="container-riga-4">
+            <div class="container-riga2">
                 <div class="contenitore-testo-2">
                     <h1 class="titolo-nero">From few to a fandom</h1>
                     <p class="testo-nero">Get any community running with moderation tools and custom member access. Give members special powers, set up private channels, and more.</p>
@@ -65,12 +65,15 @@
             </div>
         </div>
         <section class="backgound-color-gray">
-                <div class="testo-grande">
-                    <h1>RELIABLE TECH FOR STAYING CLOSE</h1>
-                    <p>Low-latency voice and video feels like you’re in the same room. Wave hello over video, watch friends stream their games, or gather up and have a drawing session with screen share.</p>
-                </div>
+                
                 <div class="container-riga-4">
-                    <div class="rettangolo-verde"></div>
+                    <div class="testo-grande">
+                        <h1 class="titolo-grande">RELIABLE TECH FOR STAYING CLOSE</h1>
+                        <p class="contenuto-grande">Low-latency voice and video feels like you’re in the same room. Wave hello over video, watch friends stream their games, or gather up and have a drawing session with screen share.</p>
+                    </div>
+                    <div class="rettangolo-verde">
+                      
+                    </div>
                 </div>
         </section>
         <section class="backgound-color-black">
